--- a/assets/css/shop-order.css
+++ b/assets/css/shop-order.css
@@ -1,3 +1,7 @@
+p.form-field .form-field-wide .topdrop-dropshipping {
+  margin-top: 50px;
+}
+
 #topdrop-load-dropship-data {
   text-decoration: underline;
   cursor: pointer;
